# lib-argparse

./: .gitignore  Cargo.toml  README.md  TODO.md  generate-code-coverage.sh
fluent/: en.ftl  fr.ftl
macros/: Cargo.toml  fluent
macros/fluent/: fr.ftl
macros/src/: action_wrapper.rs  command.rs  commands.rs  config_flag.rs  description.rs  flag_name.rs  help_flag.rs  lib.rs  parser.rs  parsing_flag.rs  parsing_positional.rs  positionals.rs  simple_positional.rs  version_flag.rs
macros/src/command/: mod.rs
macros/src/command/input/: extract.rs  into_output.rs  mod.rs
macros/src/command/input/info/: default.rs  extract.rs  into_output.rs  mod.rs
macros/src/command/input/struct/: extract.rs  into_output.rs  mod.rs
macros/src/command/output/: mod.rs  new.rs  to_tokens.rs
macros/src/command/output/as_f64/: mod.rs  new.rs  to_tokens.rs
macros/src/command/output/help/: mod.rs  new.rs  to_tokens.rs
macros/src/command/output/kind/: mod.rs  to_tokens.rs
macros/src/command/output/struct/: mod.rs  new.rs  to_tokens.rs
macros/src/command/output/version/: mod.rs  to_tokens.rs
macros/src/flag_group/input/: extract.rs  into_output.rs  mod.rs
macros/src/flag_group/input/struct/: extract.rs  into_output.rs  mod.rs
macros/src/flag_group/output/: mod.rs
macros/src/flag_group/output/struct/: mod.rs  new.rs  to_tokens.rs
macros/src/parser/: flags.rs  mod.rs
macros/src/positional/input/: extract.rs  into_output.rs  mod.rs
macros/src/positional/output/: mod.rs  to_tokens.rs
macros/src/simple_flag/: mod.rs  options_type.rs  parameter_info.rs
src/: lib.rs  (+8 more)
(+310 files in other folders)
