[package]
name = "macros"
description = "Macros for lib-argparse"

version.workspace = true
authors.workspace = true
edition.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro-util.workspace = true
i18n.workspace = true
